force-app/main/default/objects/FurtherPriceInformation__c/FurtherPriceInformation__c.object-meta.xml
<CustomObject>
    <label>Further Price Information</label>
    <nameField>
        <displayFormat>FPI-{0000000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Further Price Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>