force-app/main/default/objects/FurtherPriceInformation__c/fields/Bottom_Line_Price__c.field-meta.xml
<CustomField>
    <fullName>Bottom_Line_Price__c</fullName>
    <label>Bottom Line Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>