force-app/main/default/objects/FurtherPriceInformation__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Further Price Informations</relationshipLabel>
    <relationshipName>FurtherPriceInformation</relationshipName>
    <type>Lookup</type>
</CustomField>